--- a/markup/_layouts/_content/live_score_content.jade
+++ b/markup/_layouts/_content/live_score_content.jade
@@ -257,7 +257,7 @@ section.nl-section.nl-players.nl-live-score
 										p.tit original
 										p 90.3
 									div.col
-										p.tit Live projections
+										p.tit Live score
 										p 114.8
 									div.col
 										p.tit PMR
@@ -272,7 +272,7 @@ section.nl-section.nl-players.nl-live-score
 									p 90.3
 							div.col-6.small-padding-live-score
 								div.rank__content.leaders-list
-									p.tit Live projections
+									p.tit Live score
 									p 114.8
 							div.col-3.small-padding-live-score
 								div.rank__content.leaders-list
