--- a/markup/_layouts/_content/live_score_content_soccer.jade
+++ b/markup/_layouts/_content/live_score_content_soccer.jade
@@ -271,7 +271,7 @@ section.nl-section.nl-players.nl-live-score.soccer
 										p.tit original
 										p 90.3
 									div.col
-										p.tit Live projections
+										p.tit Live score
 										p 114.8
 									div.col
 										p.tit PMR
@@ -286,7 +286,7 @@ section.nl-section.nl-players.nl-live-score.soccer
 									p 90.3
 							div.col-6.small-padding-live-score
 								div.rank__content.leaders-list
-									p.tit Live projections
+									p.tit Live score
 									p 114.8
 							div.col-3.small-padding-live-score
 								div.rank__content.leaders-list
@@ -382,7 +382,7 @@ section.nl-section.nl-players.nl-live-score.soccer
 											th NAME
 											th POS
 											th FP
-											th SALARY
+											th SCORE
 											th
 
 									tbody
@@ -392,7 +392,7 @@ section.nl-section.nl-players.nl-live-score.soccer
 												p Player name
 											td.pos G
 											td 30
-											td $0
+											td 12
 											td
 										tr
 
@@ -400,7 +400,7 @@ section.nl-section.nl-players.nl-live-score.soccer
 												p Player name
 											td.pos D
 											td 30
-											td $0
+											td 12
 											td
 										tr
 
