--- a/markup/_layouts/_content/live_score_content_soccer.jade
+++ b/markup/_layouts/_content/live_score_content_soccer.jade
@@ -267,15 +267,15 @@ section.nl-section.nl-players.nl-live-score.soccer
 						div.rank__stats.part-of-block
 							div.rank__content.leaders-list
 								div.row
-									div.col
+									div.col-12
 										p.tit original
-										p 90.3
-									div.col
+										p.points 90.3
+									div.col-12
 										p.tit Live score
-										p 114.8
-									div.col
+										p.points 114.8
+									div.col-12
 										p.tit PMR
-										p 360
+										p.points 360
 
 				div.rank.margin-top-10
 					div.rank__stats.single-block
@@ -283,15 +283,15 @@ section.nl-section.nl-players.nl-live-score.soccer
 							div.col-3.small-padding-live-score
 								div.rank__content.leaders-list
 									p.tit original
-									p 90.3
+									p.points 90.3
 							div.col-6.small-padding-live-score
 								div.rank__content.leaders-list
 									p.tit Live score
-									p 114.8
+									p.points 114.8
 							div.col-3.small-padding-live-score
 								div.rank__content.leaders-list
 									p.tit PMR
-									p 360
+									p.points 360
 
 				div.nl-team-button
 					button.btn.btn-team.btn-big-radius.active(type="button").field-view-btn field view
