status of playing played implemented on list view own team live scores page

--- a/markup/_layouts/_content/live_score_content.jade
+++ b/markup/_layouts/_content/live_score_content.jade
@@ -32,6 +32,8 @@ mixin contest-info(times)
 mixin team-field-table(times)
 	each i in new Array(times)
 		tr
+			td.indicated
+				span.played.indicator
 			td Player name
 			td.pos FLEX
 			td 30
@@ -253,15 +255,15 @@ section.nl-section.nl-players.nl-live-score
 						div.rank__stats.part-of-block
 							div.rank__content.leaders-list
 								div.row
-									div.col
+									div.col-12
 										p.tit original
-										p 90.3
-									div.col
+										p.points 90.3
+									div.col-12
 										p.tit Live score
-										p 114.8
-									div.col
+										p.points 114.8
+									div.col-12
 										p.tit PMR
-										p 360
+										p.points 360
 
 				div.rank.margin-top-10
 					div.rank__stats.single-block
@@ -269,15 +271,15 @@ section.nl-section.nl-players.nl-live-score
 							div.col-3.small-padding-live-score
 								div.rank__content.leaders-list
 									p.tit original
-									p 90.3
+									p.points 90.3
 							div.col-6.small-padding-live-score
 								div.rank__content.leaders-list
 									p.tit Live score
-									p 114.8
+									p.points 114.8
 							div.col-3.small-padding-live-score
 								div.rank__content.leaders-list
 									p.tit PMR
-									p 360
+									p.points 360
 
 				div.nl-team-button
 					button.btn.btn-team.btn-big-radius.active(type="button").field-view-btn field view
@@ -356,7 +358,7 @@ section.nl-section.nl-players.nl-live-score
 						.row
 							.col-12
 								div.nl-team-card.table-data-field
-									h3 team NLC2
+									h3 MY NLC2 TEAM
 									<img src="assets/img/helmet.png" alt="helmet">
 
 						.row
@@ -364,7 +366,7 @@ section.nl-section.nl-players.nl-live-score
 								table.table.table-striped.nl-team-list-table
 									thead
 										tr
-
+											th
 											th NAME
 											th POS
 											th FP
