--- a/markup/_layouts/_content/live_score_content_soccer.jade
+++ b/markup/_layouts/_content/live_score_content_soccer.jade
@@ -32,7 +32,9 @@ mixin contest-info(times)
 mixin team-field-table(times)
 	each i in new Array(times)
 		tr
-			td Player name
+			td.indicated
+				span.played.indicator
+			td Player namessssss
 			td.pos GK
 			td 30
 			td 12
@@ -371,14 +373,14 @@ section.nl-section.nl-players.nl-live-score.soccer
 						.row
 							.col-12
 								div.nl-team-card.table-data-field
-									h3 team NLC2
+									h3 MY NLC2 TEAM
 									<img src="assets/img/img-players.png" alt="shirt">
 						.row
 							.col-12
 								table.table.table-striped.nl-team-list-table
 									thead
 										tr
-
+											th
 											th NAME
 											th POS
 											th FP
@@ -387,7 +389,8 @@ section.nl-section.nl-players.nl-live-score.soccer
 
 									tbody
 										tr
-
+											td.indicated
+												span.played.indicator
 											td 
 												p Player name
 											td.pos G
@@ -395,7 +398,8 @@ section.nl-section.nl-players.nl-live-score.soccer
 											td 12
 											td
 										tr
-
+											td.indicated
+												span.played.indicator
 											td 
 												p Player name
 											td.pos D
@@ -403,7 +407,8 @@ section.nl-section.nl-players.nl-live-score.soccer
 											td 12
 											td
 										tr
-
+											td.indicated
+												span.played.indicator
 											td 
 												p Player name
 											td.pos D
@@ -411,7 +416,8 @@ section.nl-section.nl-players.nl-live-score.soccer
 											td 12
 											td
 										tr
-
+											td.indicated
+												span.played.indicator
 											td 
 												p Player name
 											td.pos D
@@ -419,7 +425,8 @@ section.nl-section.nl-players.nl-live-score.soccer
 											td 12
 											td
 										tr
-
+											td.indicated
+												span.played.indicator
 											td 
 												p Player name
 											td.pos D
@@ -427,7 +434,8 @@ section.nl-section.nl-players.nl-live-score.soccer
 											td 12
 											td
 										tr
-
+											td.indicated
+												span.played.indicator
 											td 
 												p Player name
 											td.pos M
@@ -435,7 +443,8 @@ section.nl-section.nl-players.nl-live-score.soccer
 											td 12
 											td
 										tr
-
+											td.indicated
+												span.played.indicator
 											td 
 												p Player name
 											td.pos M
@@ -443,7 +452,8 @@ section.nl-section.nl-players.nl-live-score.soccer
 											td 12
 											td
 										tr
-
+											td.indicated
+												span.played.indicator
 											td 
 												p Player name
 											td.pos M
@@ -451,7 +461,8 @@ section.nl-section.nl-players.nl-live-score.soccer
 											td 12
 											td
 										tr
-
+											td.indicated
+												span.played.indicator
 											td 
 												p Player name
 											td.pos S
@@ -459,7 +470,8 @@ section.nl-section.nl-players.nl-live-score.soccer
 											td 12
 											td
 										tr
-
+											td.indicated
+												span.played.indicator
 											td 
 												p Player name
 											td.pos S
@@ -467,7 +479,8 @@ section.nl-section.nl-players.nl-live-score.soccer
 											td 12
 											td
 										tr
-
+											td.indicated
+												span.played.indicator
 											td 
 												p Player name
 											td.pos S
