--- a/markup/_dist/assets/css/style.css
+++ b/markup/_dist/assets/css/style.css
@@ -14509,9 +14509,6 @@ td:nth-child(4).homepage-list-view {
 .nl-live-score.soccer .nl-team-list-table td:first-child {
   text-align: left; }
 
-.nl-live-score.soccer .nl-my-teams .nl-team-list-table td:nth-child(1) {
-  padding-left: 1.5rem; }
-
 .nl-live-score.soccer .nl-team-list {
   max-width: 27.25rem; }
 
@@ -14695,9 +14692,6 @@ td:nth-child(4).homepage-list-view {
 .nl-live-score .nl-team-list {
   max-width: 27.25rem; }
 
-.nl-live-score .nl-my-teams .table th:nth-child(2) {
-  text-align: center; }
-
 .nl-live-score .rank__content.leaders-list {
   padding: 0.375rem 0rem 0.375rem 0rem;
   margin-left: 0px; }
@@ -14804,19 +14798,23 @@ td:nth-child(4).homepage-list-view {
   .nl-live-score .nl-team-list-table th:first-child,
   .nl-live-score .nl-team-list-table td:first-child {
     text-align: left;
-    width: 40%; }
+    width: 9%; }
 
 .nl-live-score .nl-my-teams .nl-team-list-table td:nth-child(2) {
-  text-align: center;
-  width: 20%; }
+  text-align: left;
+  width: 40%; }
 
 .nl-live-score .nl-my-teams .nl-team-list-table td:nth-child(3) {
   text-align: center;
-  width: 20%; }
+  width: 17%; }
 
 .nl-live-score .nl-my-teams .nl-team-list-table td:nth-child(4) {
   text-align: center;
-  width: 20%; }
+  width: 17%; }
+
+.nl-live-score .nl-my-teams .nl-team-list-table td:nth-child(5) {
+  text-align: center;
+  width: 17%; }
 
 .nl-live-score .nl-team-field .nl-player-block p {
   line-height: 11px; }
