better naming current contest

--- a/markup/_layouts/_content/live_score_content.jade
+++ b/markup/_layouts/_content/live_score_content.jade
@@ -17,8 +17,8 @@ mixin repeat(times)
 mixin current-table(times)
 	each i in new Array(times)
 		tr
-			td Football 1775 LONGFootballFootballFootballFootball
-			td TEAM NAME LONG 111
+			td Touchsdowns all day long!
+			td The best NLC2 team
 			td.orange 114/150
 			td 350
 
