--- a/markup/_layouts/_content/_homepage/top5-player.jade
+++ b/markup/_layouts/_content/_homepage/top5-player.jade
@@ -46,29 +46,29 @@ h5.hidden-xxs.subtitle TOP 5
 					a(data-dismiss='modal', role='menuitem', tabindex='-1', value='#TE') Tight Ends
 
 div.row
-	button.mobile-menu.dropdown(type='button', data-toggle='modal', data-target='#weekModal') Choose Week
+	button.mobile-menu.dropdown(type='button', data-toggle='modal', data-target='#weekModal') Choose Position
 	div.mobile-menu.active(data-target="#carouselTop5Players" data-slide-to="0")
 		div.number
 			p.rank-player-top5 1
-		p Matt Ryan1
+		p.name-top5 Matt Ryan1
 div.row
 	div.mobile-menu.active(data-target="#carouselTop5Players" data-slide-to="1")                
 		div.number
 			p.rank-player-top5 2
-		p Matt Ryan2
+		p.name-top5 Matt Ryan2
 	div.mobile-menu.active(data-target="#carouselTop5Players" data-slide-to="2")                
 		div.number
 			p.rank-player-top5 3
-		p Matt Ryan3
+		p.name-top5 Matt Ryan3
 div.row
 	div.mobile-menu.active(data-target="#carouselTop5Players" data-slide-to="3")                
 		div.number
 			p.rank-player-top5 4
-		p Matt Ryan4
+		p.name-top5 Matt Ryan4
 	div.mobile-menu.active(data-target="#carouselTop5Players" data-slide-to="4")                
 		div.number
 			p.rank-player-top5 5
-		p Matt Ryan5
+		p.name-top5 Matt Ryan5
 
 div.tab-content(id="top5-player-content")
 	div(role='tabpanel' class='tab-pane active top-level-panel' id='RB')
