--- a/markup/_scss/sections/_nl-players.scss
+++ b/markup/_scss/sections/_nl-players.scss
@@ -1,3 +1,7 @@
+.nl-players .nl-mob-table #accordion a .row:after {
+  right: 2.5rem;
+}
+
 .nl-players.soccer {
   background: url(../img/stadion_detail.jpg) center center no-repeat fixed;
   background-size: cover;
