--- a/markup/_scss/sections/_homepage.scss
+++ b/markup/_scss/sections/_homepage.scss
@@ -5,7 +5,7 @@
       margin-bottom: 15px;
 
       @include respond-to(tablets) {
-        margin-bottom: 22px;
+        line-height: 1.4rem;
       }
 
       @include respond-to(wide-tablets) {
@@ -313,6 +313,37 @@
 
 .nl-section.homepage {
 
+  .name-top5 {
+
+    @include respond-to (allmobile) {
+      font-size: 16px;
+    }
+
+    @include respond-to (wide-tablets) {
+      top: 20%;
+    }
+
+    @include respond-to (medium-display) {
+    top: 21%;
+    left: 12%;
+    }
+
+    @include respond-to (large-display) {
+    top: 20%;
+    left: 18%;
+    }
+
+    @include respond-to (wide-display) {
+      top: 21%;
+      left: 18%;
+    }
+
+    @include respond-to (extra-large-display) {
+    top: 23%;
+    left: 25%;
+    }
+  }
+
   .carousel-item.active, .carousel-item-next, .carousel-item-prev {
     display: block;
   }
@@ -341,6 +372,7 @@
 
   .manager-image {
     width: 100%;
+    border-radius: 0.625rem;
   }
 
   .nl-table-scroll2 {
@@ -381,12 +413,14 @@
 
     .nl-create-team .nl-team-card.table-data-field h3, #top5-manager-content h3 {
       font-size: 1.5rem;
+      font-weight: 500;
     }
 
     #top5-manager-content h3 {
       font-size: 1.15rem;
-      line-height: 1rem;
+      line-height: 1.3rem;
       padding-left: 0;
+      font-weight: 500;
     }
   }
 
@@ -407,11 +441,13 @@
 
     .nl-create-team .nl-team-card.table-data-field h3, #top5-manager-content h3 {
       font-size: 1rem;
+      font-weight: 500;
     }
 
     #top5-manager-content h3 {
       line-height: 1rem;
       padding-left: 0;
+      font-weight: 500;
     }
   }
 
@@ -423,11 +459,13 @@
 
     .nl-create-team .nl-team-card.table-data-field h3, #top5-manager-content h3 {
       font-size: 1.5rem;
+      font-weight: 500;
     }
 
     #top5-manager-content h3 {
       line-height: 1.5rem;
       padding-left: 0;
+      font-weight: 500;
     }
   }
 
@@ -484,6 +522,10 @@
   .menu-item.top-5 .number p {
     font-size: 18px;
     line-height: 1.1;
+
+    @include respond-to (extra-large-display) {
+      line-height: 1.3;
+    }
 
     @include respond-to (extra-large-display) {
       line-height: 1.3;
@@ -964,7 +1006,7 @@
       height: 100px;
       background: url(../img/player1.png) top center no-repeat;
       background-size: cover;
-      
+      border-radius: 0.625rem;
 
       @include respond-to(wide-tablets) {
         height: 55px;
@@ -1047,6 +1089,7 @@
       display: inline-block;
       margin-top: -3px;
       color: #ffffff;
+      border-radius: 0.325rem 0 0 0.325rem;
 
       @include respond-to(wide-tablets) {
         top: 58px;
@@ -1091,6 +1134,7 @@
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
+      border-radius: 0.325rem;
 
       p {
         padding: 2px 5px 5px 15px;
@@ -1149,6 +1193,7 @@
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
+      border-radius: 0.325rem;
 
       p {
         padding: 2px 5px 5px 15px;
@@ -1350,6 +1395,7 @@
     width: 100%;
     text-transform: uppercase;
     height: 40px;
+    border-radius: 0.625rem;
 
     @include respond-to(allsmall) {
       width: 100%;
@@ -1463,6 +1509,7 @@
       height: 40px;
       padding: 0;
       margin: 0;
+      border-radius: 0.625rem 0 0 0.625rem;
 
       @include respond-to(handhelds) {
         width: 50px;
@@ -1514,12 +1561,14 @@
     width: 100%;
     text-transform: uppercase;
     height: 40px;
+    border-radius: 0.625rem 0 0 0.625rem;
 
     @include respond-to(allmobile) {
       // width: calc(100% - 50px);
       // margin: 0 25px;
       width: 100%;
       margin: 0;
+      border-radius: 0.625rem;
     }
 
     @include respond-to(handhelds) {
@@ -1531,28 +1580,66 @@
     .number {
       background: #e89608; /* Old browsers */
       background: linear-gradient(to bottom, #e89608 0%,#e37606 100%);
+      border-radius: 0.625rem 0 0 0.625rem;
     }
 
     .name {
       position: absolute;
-      top: 7px;
-      left: 60px;
+      top: 4px;
+      left: 49px;
+      
+      @include respond-to(handhelds) {
+        top: 4px;
+      }
 
-      @include respond-to(allnotwide) {
-          left: 40px;
-        }
+      @include respond-to(wide-handhelds) {
+        top: 4px;
+        left: 55px;
+      }
 
+      @include respond-to(tablets) {
+        top: 6px;
+        left: 50px;
+      }
+
+      @include respond-to(wide-tablets) {
+        top: 4px;
+        left: 45px;
+      }
+      @include respond-to(medium-display) {
+        top: 4px;
+        left: 48px;
+      }
+      @media (min-width: 1366px) {
+        top: 4px;
+        left: 49px;
+      }
 
       p {
 
-        @include respond-to(allwider) {
-          font-size: 15px;
-          margin-left: -14px;
-          padding: 3px 0 0 8px;
+        font-size: 15px;
+        margin-left: 0;
+
+        @include respond-to(handhelds) {
+          font-size: 18px;
         }
 
-        @include respond-to(allnotwide) {
-          font-size: 16px;
+        @include respond-to(wide-handhelds) {
+          font-size: 19px;
+        }
+
+        @include respond-to(tablets) {
+          font-size: 21px;
+        }
+
+        @include respond-to(wide-tablets) {
+          font-size: 17px;
+        }
+        @include respond-to(medium-display) {
+          font-size: 19px;
+        }
+        @media (min-width: 1366px) {
+          font-size: 21px;
         }
         
       }
@@ -1589,6 +1676,7 @@
       height: 40px;
       padding: 0;
       margin: 0;
+      border-radius: 0.625rem 0 0 0.625rem;
 
       @include respond-to(handhelds) {
         width: 35px;
@@ -1805,6 +1893,7 @@
     font-size: 0.95rem;
     padding-left: 1rem;
     line-height: 1rem;
+    font-weight: 500;
   }
 
   .orange {
@@ -1963,6 +2052,7 @@
   text-transform: uppercase;
   display: inline-block;
   height: 40px;
+  border-radius: 0.625rem;
 
   .number {
     display: inline-block;
@@ -1971,16 +2061,34 @@
     background: #e89608; /* Old browsers */
     background: linear-gradient(to bottom, #e89608 0%,#e37606 100%);
     padding-top: 3px;
+    border-radius: 0.625rem 0 0 0.625rem;
+
+    p {
+
+      @include respond-to (wide-handhelds) {
+        line-height: 1.1rem;
+      }
+    }
   }
 
   p {
     display: inline-block;
     padding: 8px 0 0 15px;
+    line-height: 0.8rem;
+
+    @include respond-to (wide-handhelds) {
+      line-height: 1.1rem;
+    }
 
     &.rank-manager-top5, &.rank-player-top5 {
       padding-top: 10px;
       font-size: 18px;
       font-weight: 600;
+      line-height: 1.3rem;
+    }
+
+    &.name-top5 {
+      line-height: 1.2rem;
     }
   }
 
@@ -1991,7 +2099,7 @@
     box-shadow: none;
     border: none;
     font-weight: 600;
-    font-size: 12px;
+    font-size: 16px;
 
     i {
       float: right;
